<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">闪店到家</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Began2Experience">立即体验</string>
    <string name="no_network_error_tips">无网络连接</string>
    <string name="init_failed">加载失败</string>
    <string name="dialog_title_notice">温馨提示</string>
    <string name="click_no_update">"当前已经是最新版本"</string>

    <!-- pulltorefreshlayout -->
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="load_nomore">没有更多了</string>
    <!--&lt;!&ndash;<string name="pull_to_refresh">下拉刷新</string>&ndash;&gt;-->
    <!--<string name="release_to_refresh">松开刷新</string>-->
    <!--<string name="refreshing">刷新中…</string>-->

    <string name="title_text_location1">定位当前</string>
    <string name="title_text_famliymart">选择附近超市</string>
    <string name="title_text_modifylocation">修改便利店</string>
    <string name="more">更多</string>
    <string name="title_text_search">搜索</string>
    <!--  <string name="cancle">取消</string> -->
    <string name="goods_details">商品详情</string>
    <string name="shopping_cart">购物车</string>
    <string name="balance_title">确认订单</string>
    <string name="shop_current_title">当前超市名称</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>

    <string name="share">分享</string>
    <string name="consignee">收货人：</string>
    <string name="name_input_hint">请输入您的姓名或昵称，6个字以内</string>
    <string name="phone">联系电话：</string>
    <string name="phone_input_hint">请输入您的11位手机号码</string>
    <string name="address">详细地址：</string>
    <string name="address_input_hint">请输入您的详细地址</string>
    <string name="save">保存</string>
    <string name="receiving_address">收货地址</string>
    <string name="send_time">送货时间</string>
    <string name="waterticket">剩余桶数：</string>
    <string name="modify">修改</string>
    <string name="remark">备注</string>
    <string name="remark_input_hint">添加备注</string>
    <string name="commit_order">提交订单</string>
    <string name="selected_goods">已选商品</string>
    <string name="coupon">优惠券</string>
    <string name="goods_money">商品费</string>
    <string name="send_money">配送费</string>
    <string name="xjzf">货到付款</string>
    <string name="wxzf">微信支付</string>
    <string name="zfb">支付宝</string>
    <string name="bdqb">百度钱包</string>
    <string name="feedback_hint">您的意见将是我们前进的动力，我们会努力改正，加油！</string>
    <string name="feedback_input_hint">请输入您的意见</string>
    <string name="commit">提交</string>
    <string name="modify_address">修改地址</string>
    <string name="please">请选择</string>
    <string name="nearby_shop">附近的便利店</string>
    <string name="phone_number">手机号</string>
    <string name="name">姓名</string>
    <string name="appellation">称谓</string>
    <string name="location_current_loc">定位当前位置</string>
    <string name="notity_loc">修改位置</string>
    <string name="login_phone_hint">请输入11位手机号</string>
    <string name="login_ver_code_input">请输入验证码</string>
    <string name="get_ver_code">获取验证码</string>
    <string name="login_in">登录</string>
    <string name="mean_send_time">平均送货时间</string>
    <string name="send_out">起送价格</string>
    <string name="classify">分类</string>
    <string name="a_key_send_water">一键送水</string>
    <string name="buy_full">整箱购</string>
    <string name="please_input_address">请输入地址搜索附近的便利店</string>
    <string name="sendding">配送中</string>
    <string name="receiving">收货</string>
    <string name="total">合计</string>
    <string name="order_again">再来一单</string>
    <string name="complain">我要投诉</string>
    <string name="order_details">订单详情</string>
    <string name="order_number">订单号</string>
    <string name="order_time">下单时间</string>
    <string name="pay_way">支付方式</string>
    <string name="hot_search">热门搜索</string>
    <string name="please_search_input_hint">请输入您要搜索的商品</string>
    <string name="updata_check">更新检查</string>
    <string name="about_us">关于我们</string>
    <string name="login_out">退出登录</string>
    <string name="my_order">我的订单</string>
    <string name="my_water_ticket">我的水票</string>
    <string name="voucher">优惠券</string>
    <string name="client_server">4008885708</string>
    <string name="my_address">我的地址</string>
    <string name="news_center">消息中心</string>
    <string name="feedback">意见反馈</string>
    <string name="richscan">扫一扫</string>
    <string name="faq_question">常见问题</string>
    <string name="notescontact">"联系客服 "</string>
    <string name="action_news">活动消息</string>
    <string name="system_news">系统消息</string>
    <string name="product_about">商品简介</string>
    <string name="pay_now">立即支付</string>
    <string name="continue_buy_water_ticket">继续购买水票</string>
    <string name="add_address">新增收货地址</string>
    <string name="buy_water_ticket">购买水票</string>
    <string name="text_location_notice">第一次来小店，让小店知道你的位置哦。</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="pay_result_callback_msg_success" formatted="false">支付成功!</string>
    <string name="app_tip" formatted="false">支付结果</string>
    <string name="cost">原价：</string>
    <string name="bargain">特价商品</string>
    <string name="share_notice">楼下便利店"签约"闪店侠啦，在线下单后为您闪电送达，满足人们"宅，急，鲜"的商品需求，闪店侠带您一起疯狂玩转社区O2O!</string>

    <!-- 网络出错提示 -->
    <string name="network_not_connected">网络连接失败，请检查网络设置</string>
    <string name="xml_parser_failed">数据解析异常</string>
    <string name="io_exception_error">文件流异常</string>
    <string name="http_status_code_error">网络异常，错误码：%d</string>
    <string name="http_exception_error">网络异常，请求超时</string>
    <string name="socket_exception_error">网络异常，读取数据超时</string>
    <string name="app_run_code_error">应用程序运行时异常</string>


</resources>