<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/layout_width_height_ff"
    android:orientation="vertical" >

    <include
        android:id="@+id/head"
        layout="@layout/title_bar" />

    <ImageView
        android:id="@+id/iv_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/head"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/ic_location"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/tv_notice"
        style="@style/layout_width_height_fw"
        android:layout_below="@id/iv_img"
        android:gravity="center"
        android:text="@string/text_location_notice"
        android:textColor="@color/color_location_text" />

    <Button
        android:id="@+id/btn_current"
        style="@style/layout_width_height_fw"
        android:layout_below="@id/tv_notice"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/buttom_bg"
        android:text="@string/location_current_loc"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_modify_location"
        style="@style/layout_width_height_fw"
        android:layout_below="@id/btn_current"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/buttom_bg"
        android:text="@string/notity_loc"
        android:textColor="@color/white" />

</RelativeLayout>