<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_modify_address"
    style="@style/layout_width_height_ff"
    android:background="@color/page_bg_gray">

    <include
        android:id="@+id/title"
        layout="@layout/title_bar" />

    <View
        android:id="@+id/line"
        style="@style/line_style"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/title" />

    <RelativeLayout
        android:id="@+id/rl_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/line"
        android:background="@color/white"
        android:paddingLeft="12dp">

        <TextView
            android:id="@+id/tv_name"
            style="@style/layout_width_height_ww"
            android:layout_centerVertical="true"
            android:text="@string/consignee" />

        <EditText
            android:id="@+id/et_name"
            style="@style/layout_width_height_fw"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/tv_name"
            android:background="@color/white"
            android:hint="@string/name_input_hint"
            android:maxLength="12"
            android:singleLine="true"
            android:textSize="14sp" />
    </RelativeLayout>

    <View
        android:id="@+id/line1"
        style="@style/line_style"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/rl_name" />

    <RelativeLayout
        android:id="@+id/rl_address"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/line1"
        android:background="@color/white"
        android:paddingLeft="12dp">

        <TextView
            android:id="@+id/tv_phone"
            style="@style/layout_width_height_ww"
            android:layout_centerVertical="true"
            android:text="@string/phone" />

        <EditText
            android:id="@+id/et_phone"
            style="@style/layout_width_height_fw"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/tv_phone"
            android:background="@color/white"
            android:hint="@string/phone_input_hint"
            android:maxLength="11"
            android:numeric="integer"
            android:singleLine="true"
            android:textSize="14sp" />
    </RelativeLayout>

    <View
        android:id="@+id/line2"
        style="@style/line_style"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/rl_address" />

    <RelativeLayout
        android:id="@+id/rl_district"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/line2"
        android:background="@color/white"
        android:paddingLeft="12dp">

        <TextView
            android:id="@+id/tv_district"
            style="@style/layout_width_height_ww"
            android:layout_centerVertical="true"
            android:text="所在城区：" />

        <EditText
            android:id="@+id/et_district"
            style="@style/layout_width_height_fw"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/tv_district"
            android:background="@color/white"
            android:clickable="true"
            android:hint="请输入城区和区域"
            android:singleLine="true"
            android:textSize="14sp" />
    </RelativeLayout>

    <View
        android:id="@+id/line3"
        style="@style/line_style"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/rl_district" />


    <RelativeLayout
        android:id="@+id/rl_address_detail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/line3"
        android:background="@color/white"
        android:paddingLeft="12dp">

        <TextView
            android:id="@+id/tv_address"
            style="@style/layout_width_height_ww"
            android:layout_centerVertical="true"
            android:text="@string/address" />

        <EditText
            android:id="@+id/et_address"
            style="@style/layout_width_height_fw"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/tv_address"
            android:background="@color/white"
            android:hint="@string/address_input_hint"
            android:singleLine="true"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:background="@color/page_bg_gray"
        style="@style/layout_width_height_ff"
        android:layout_below="@id/rl_address_detail">

        <Button
            android:id="@+id/bt_save"
            style="@style/layout_width_height_fw"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/buttom_selector_green"
            android:text="@string/save"
            android:textColor="@color/white" />

    </RelativeLayout>


</RelativeLayout><!-- From: file:/D:/git/ButtonLife/ButtonLife/res/layout/activity_new_address.xml -->