<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   style="@style/layout_width_height_ff"
    android:orientation="vertical" >

    <include
        android:id="@+id/title"
        layout="@layout/title_bar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/line_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/white" >

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/home_personal"
            android:textSize="18sp" />

        <View
            android:layout_width="1px"
            android:layout_height="fill_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/tv_username"
            android:background="@color/line_color" />

        <TextView
            android:id="@+id/textView1"
            style="@style/layout_width_height_ww"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:text="@string/get_ver_code"
            android:textColor="@color/title_color" />

        <EditText
            android:id="@+id/et_username"
            style="@style/layout_width_height_ww"
            android:layout_alignBaseline="@+id/textView1"
            android:layout_alignBottom="@+id/textView1"
            android:layout_toLeftOf="@+id/textView1"
            android:background="@null"
            android:ems="10"
            android:hint="@string/login_phone_hint"
            android:singleLine="true"
            android:textSize="14sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/line_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/white"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_verification_code"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/home_personal"
            android:textSize="18sp" />

        <View
            android:layout_width="1px"
            android:layout_height="fill_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/tv_verification_code"
            android:background="@color/line_color" />

        <EditText
            android:id="@+id/et_password"
            style="@style/layout_width_height_ww"
            android:layout_centerVertical="true"
            android:layout_marginLeft="19dp"
            android:layout_toRightOf="@+id/tv_verification_code"
            android:background="@null"
            android:ems="10"
            android:hint="@string/login_ver_code_input"
            android:inputType="textPassword"
            android:textSize="14sp" >
        </EditText>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_color" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="20dp"
        android:background="@color/title_color"
        android:text="@string/login_in"
        android:textColor="@color/white"
        android:textSize="18sp" />

</LinearLayout>