<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/layout_width_height_ff">

    <include
        android:id="@+id/head"
        layout="@layout/title_bar" />

    <RelativeLayout
        android:id="@+id/rl_notice"
        style="@style/layout_width_height_fw"
        android:layout_below="@id/head"
        android:padding="5dp">

        <LinearLayout
            android:id="@+id/ll_text"
            style="@style/layout_width_height_ww"
            android:layout_centerVertical="true"
            android:orientation="horizontal">

            <TextView
                style="@style/layout_width_height_ww"
                android:text="@string/please"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_shop_addr"
                style="@style/layout_width_height_ww"
                android:textColor="@color/text_color_1"
                android:textSize="12sp" />

            <TextView
                style="@style/layout_width_height_ww"
                android:text="@string/nearby_shop"
                android:textSize="12sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_modify"
            style="@style/layout_width_height_ww"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:background="@drawable/green_bg"
            android:clickable="true"
            android:padding="5dp"
            android:text="@string/modify_address"
            android:textColor="@color/white" />
    </RelativeLayout>

    <ListView
        android:id="@+id/listview"
        style="@style/layout_width_height_ff"
        android:layout_below="@id/rl_notice"
        android:scrollbars="none" />

    <RelativeLayout
        android:id="@+id/rl_loading"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerInParent="true"
        android:visibility="gone">

        <LinearLayout
            style="@style/layout_width_height_ff"
            android:gravity="center"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/lee_progressBar"
                style="@style/ProgressBar_loading"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:indeterminate="false" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_error"
        style="@style/layout_width_height_ff"
        android:layout_below="@id/rl_notice"
        android:visibility="gone">

        <LinearLayout
            style="@style/layout_width_height_ff"
            android:background="@color/page_bg_gray"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                style="@style/layout_width_height_ww"
                android:layout_marginBottom="10dp"
                android:src="@drawable/no_wifi" />

            <TextView
                android:id="@+id/lee_error_msg"
                style="@style/layout_width_height_ww"
                android:layout_marginBottom="10dp"
                android:text="网络异常"
                android:textColor="@color/font_color_33" />

            <TextView
                style="@style/layout_width_height_ww"
                android:text="请点击屏幕重新加载！"
                android:textColor="@color/font_color_66" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>