<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/layout_width_height_ff"
    android:background="@color/page_bg_gray" >

    <include
        android:id="@+id/head"
        layout="@layout/title_bar" />

    <View
        android:id="@+id/line"
        style="@style/line_style"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/head" />

    <LinearLayout
        style="@style/layout_width_height_ff"
        android:layout_below="@id/line"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/rl_version"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_below="@id/line"
            android:background="@color/white"
            android:clickable="true"
            android:paddingLeft="12dp"
            android:paddingRight="12dp" >

            <TextView
                android:id="@+id/tv_update_version"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:drawableLeft="@drawable/setting_updata"
                android:drawablePadding="10dp"
                android:singleLine="true"
                android:text="@string/updata_check"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/iv_arror_righone"
                style="@style/layout_width_height_ww"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:src="@drawable/arrow_right" />
        </RelativeLayout>

        <View
            android:id="@+id/line1"
            style="@style/line_style"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@id/rl_version" />

        <RelativeLayout
            android:id="@+id/rl_about_us"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_below="@id/line1"
            android:background="@color/white"
            android:clickable="true"
            android:paddingLeft="12dp"
            android:paddingRight="12dp" >

            <TextView
                android:id="@+id/tv_about_us"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:drawableLeft="@drawable/setting_sddj"
                android:drawablePadding="10dp"
                android:singleLine="true"
                android:text="@string/about_us"
                android:textSize="15sp" />

            <ImageView
                style="@style/layout_width_height_ww"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:src="@drawable/arrow_right" />
        </RelativeLayout>

        <Button
            android:id="@+id/logout"
            style="@style/layout_width_height_fw"
            android:layout_below="@id/rl_about_us"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/buttom_selector_green"
            android:text="@string/login_out"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>